# nott-a-raffle

./: LICENSE  README.md  nott-a-raffle  pyproject.toml
src/ieee_raffle/: cli.py  raffle.py
src/nott_a_raffle/: raffle.py
